Add Google site verification meta tag
Added Google site verification meta tag for SEO.

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
         evt.currentTarget.className += " active";
     }
 </script>
-
+<meta name="google-site-verification" content="P2e7Wj6Ht3-WP2yBR4n1PqTIWlXPRGWNNDEIxir8gJI" />
 </body>
 </html>
+
