Revise index.html for content and style enhancements
Updated content and styling for improved clarity and user experience.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         .card:hover { transform: translateY(-10px); }
         .card i { font-size: 2.5em; color: var(--primary); margin-bottom: 20px; display: block; }
 
-        /* New Step-by-Step Section */
+        /* How it Works Section */
         .how-it-works { padding: 80px 20px; text-align: center; }
         .steps { display: flex; justify-content: space-around; gap: 20px; margin-top: 40px; flex-wrap: wrap; }
         .step { flex: 1; min-width: 200px; }
@@ -84,7 +84,7 @@
 
 <header>
     <h1 style="font-size: 4em; margin: 0;">🏆 BoxTrans</h1>
-    <p style="font-size: 1.2em; opacity: 0.8; margin: 20px 0 40px;">The Most Advanced AI-Powered Screen Translator</p>
+    <p style="font-size: 1.2em; opacity: 0.8; margin: 20px 0 40px;">Professional AI-Powered Real-Time Screen Translation</p>
     <div class="btn-group">
         <a href="https://github.com/BoxTranslate/boxtrans/releases/" class="btn">
             <i class="fa-brands fa-windows"></i> Download Free Now
@@ -94,26 +94,26 @@
 
 <div class="container">
     <div class="tabs">
-        <button class="tab-btn active" onclick="openTab(event, 'tab1')">⚡ Fast Translate</button>
-        <button class="tab-btn" onclick="openTab(event, 'tab2')">🌎 Japanese Focus</button>
+        <button class="tab-btn active" onclick="openTab(event, 'tab1')">⚡ OCR Engine</button>
+        <button class="tab-btn" onclick="openTab(event, 'tab2')">🌎 Global Support</button>
         <button class="tab-btn" onclick="openTab(event, 'tab3')">🔊 AI Voice</button>
     </div>
 
     <div id="tab1" class="tab-content active">
         <h3>Lightning Fast Recognition</h3>
-        <p>Instant text detection using state-of-the-art OCR technology.</p>
+        <p>Instant text detection using state-of-the-art PaddleOCR technology.</p>
         <img src="Animation.gif" class="gif-display" alt="OCR Demo"> 
     </div>
 
     <div id="tab2" class="tab-content">
-        <h3>Perfect for Visual Novels</h3>
-        <p><span style="background: #ffeaa7; color: #d63031; padding: 2px 8px; border-radius: 5px; font-size: 0.8em;">IMPROVING</span> Optimized for Japanese, Korean, and Chinese characters.</p>
+        <h3>Translate Anything Anywhere</h3>
+        <p>Supports over 80+ languages globally. Perfect for games, apps, and documents.</p>
         <img src="Animation2.gif" class="gif-display" alt="Language Support"> 
     </div>
 
     <div id="tab3" class="tab-content">
         <h3>Natural AI Voices (TTS)</h3>
-        <p>Don't just read, listen! High-quality Text-to-Speech for immersive learning.</p>
+        <p>Listen to your translations with high-quality Text-to-Speech in multiple languages.</p>
         <img src="Animation3.gif" class="gif-display" alt="TTS Demo">  
     </div>
 
@@ -123,26 +123,27 @@
         </a>
         <br>
         <b>If you like BoxTrans, please give us a ⭐ on GitHub to support the project!</b>
-        <p style="font-size: 0.9em; color: #777; margin-top: 10px;">Your support helps us bring more AI features!</p>
+        <p style="font-size: 0.9em; color: #777; margin-top: 10px;">Your support helps us develop new features!</p>
     </div>
 
     <div class="grid">
         <div class="card">
             <i class="fa-solid fa-bolt"></i>
             <h3>Real-Time Speed</h3>
-            <p>No more waiting. Select an area and get the translation in milliseconds.</p>
+            <p>Optimized for performance. Get results almost instantly after selection.</p>
         </div>
         
         <div class="card">
-            <i class="fa-solid fa-microchip"></i>
-            <h3>Advanced AI</h3>
-            <p>Uses PaddleOCR and deep learning for near-perfect character recognition.</p>
+            <i class="fa-solid fa-earth-asia"></i>
+            <h3>80+ Languages</h3>
+            <p>Full support for global languages. <br>
+            <span style="color: var(--primary); font-size: 0.8em; font-weight: bold;">[SOON: Japanese & Asian Focus]</span></p>
         </div>
 
         <div class="card">
             <i class="fa-solid fa-shield-halved"></i>
-            <h3>Privacy First</h3>
-            <p>Your data is yours. BoxTrans is a secure desktop tool for your daily use.</p>
+            <h3>Secure Tool</h3>
+            <p>BoxTrans is a standalone desktop application. Your privacy is our priority.</p>
         </div>
     </div>
 </div>
@@ -154,20 +155,20 @@
             <div class="step">
                 <div class="step-num">1</div>
                 <h4>Download</h4>
-                <p>Get the latest Boxtrans_Setup.exe from our releases.</p>
+                <p>Get the latest Setup.exe from our releases.</p>
             </div>
             <div class="step">
                 <div class="step-num">2</div>
                 <h4>Run as Admin</h4>
                 <p style="color: #d63031; font-weight: 600;">
-                    <i class="fa-solid fa-shield-halved"></i> Important: 
-                    Run the app as Administrator to capture game screens.
+                    <i class="fa-solid fa-triangle-exclamation"></i> Important: 
+                    Run as Administrator to capture game screens.
                 </p>
             </div>
             <div class="step">
                 <div class="step-num">3</div>
-                <h4>Read & Listen</h4>
-                <p>Select the area on your screen and get instant AI translation.</p>
+                <h4>Translate</h4>
+                <p>Select your text area and see the magic happen.</p>
             </div>
         </div>
     </div>
@@ -175,7 +176,7 @@
 
 <footer>
     <h2 style="margin-bottom: 10px;">Ready to Translate?</h2>
-    <p style="opacity: 0.7; margin-bottom: 30px;">Join the future of screen translation today.</p>
+    <p style="opacity: 0.7; margin-bottom: 30px;">Experience the professional screen translation tool.</p>
     
     <a href="https://buymeacoffee.com/boxtrans" target="_blank" style="text-decoration: none;">
         <img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" style="height: 50px;">
