--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
     </div>
 
     <div id="tab2" class="tab-content">
-        <h3 data-tr="Her Yerde Her Şeyi Çevirin">Translate Anything Anywhere</h3>
-        <p data-tr="Dünya çapında 80'den fazla dili destekler. Oyunlar, uygulamalar ve belgeler için mükemmeldir.">Supports over 80+ languages globally. Perfect for games, apps, and documents.</p>
+        <h3 data-tr="Her Yerde Her Şeyi Çevirin (v1.1)">Translate Anything Anywhere (v1.1)</h3>
+        <p data-tr="Dünya çapında 80'den fazla dili destekler. v1.1 ile Japonca, Çince ve Korece için özel dikey/çapraz okuma desteği eklendi.">
+            Supports over 80+ languages globally. Now with v1.1, featuring advanced vertical and diagonal detection for Japanese, Chinese, and Korean.
+        </p>
         <img src="Animation2.gif" class="gif-display" alt="Language Support"> 
     </div>
 
@@ -97,8 +99,8 @@
 
     <div id="tab4" class="tab-content">
         <h3 data-tr="Video Rehber Çok Yakında!">Video Guide Coming Soon!</h3>
-        <p data-tr="Tüm hikayeli oyunlar için hazırladığımız detaylı kullanım rehberi çok yakında burada olacaktır.">
-            Detailed usage guides for all story-driven games will be added here very soon.
+        <p data-tr="Tüm hikayeli oyunlar, v1.1 özellikleri ve kurulum detayları için hazırladığımız rehber çok yakında burada olacaktır.">
+            Detailed usage guides for all story-driven games, v1.1 features, and setup steps will be added here very soon.
         </p>
         <div style="padding: 60px; border: 2px dashed #ddd; border-radius: 15px; margin-top: 20px;">
             <i class="fa-solid fa-clapperboard" style="font-size: 3em; color: var(--primary); opacity: 0.5;"></i>
@@ -122,7 +124,7 @@
         <div class="card">
             <i class="fa-solid fa-earth-asia"></i>
             <h3 data-tr="80+ Dil Desteği">80+ Languages</h3>
-            <p data-tr="Dünya dilleri için tam destek. <br><span style='color: var(--primary); font-size: 0.8em; font-weight: bold;'>[YAKINDA: Japonca ve Asya Odaklı]</span>">Full support for global languages. <br><span style="color: var(--primary); font-size: 0.8em; font-weight: bold;">[SOON: Japanese & Asian Focus]</span></p>
+            <p data-tr="Dünya dilleri için tam destek. v1.1 ile Asya dilleri için dikey okuma optimize edildi!">Full support for global languages. Vertical reading optimized for Asian languages in v1.1!</p>
         </div>
         <div class="card">
             <i class="fa-solid fa-shield-halved"></i>
@@ -171,11 +173,9 @@
     <h2 style="margin-bottom: 10px;" data-tr="Çeviriye Hazır mısınız?">Ready to Translate?</h2>
     <div class="footer-links">
         <a href="https://github.com/BoxTranslate/boxtrans"><i class="fa-brands fa-github"></i> GitHub</a>
-        
         <a href="https://github.com/BoxTranslate/boxtrans/blob/main/README.md" id="doc-link">
             <i class="fa-solid fa-book"></i> <span data-tr="Dokümantasyon">Documentation</span>
         </a>
-        
         <a href="https://github.com/BoxTranslate/boxtrans/blob/main/README.md#contact--support" id="contact-link">
             <i class="fa-solid fa-envelope"></i> <span data-tr="İletişim">Contact</span>
         </a>
@@ -199,14 +199,12 @@
         const docLink = document.getElementById("doc-link");
         const contactLink = document.getElementById("contact-link");
 
-        // Dil Kontrolü ve Metin Değişimi
         if (userLang.startsWith("tr")) {
             const translatableElements = document.querySelectorAll("[data-tr]");
             translatableElements.forEach(el => {
                 el.innerHTML = el.getAttribute("data-tr");
             });
 
-            // Türkçe README linkleri
             if(docLink) docLink.href = "https://github.com/BoxTranslate/boxtrans/blob/main/README_TR.md";
             if(contactLink) contactLink.href = "https://github.com/BoxTranslate/boxtrans/blob/main/README_TR.md#-i%CC%87leti%C5%9Fim--destek";
         }
